# RustYingDraft

./: .gitignore  Cargo.toml  README.md  素材落地工具设计.md  部署文档.md
.github/: release.yml
.github/workflows/: build-release-bundles.yml  build-tauri-app.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
crates/jy_bundle/: Cargo.toml
crates/jy_bundle/src/: lib.rs
crates/jy_cli/: Cargo.toml  build.rs
crates/jy_cli/examples/: demo.rs  valorant.rs
crates/jy_cli/src/: main.rs  output.rs
crates/jy_cli/src/commands/: generate.rs  generate_demo.rs  import_bundle.rs  init.rs  inspect.rs  mod.rs  template_duplicate.rs  template_replace_material_name.rs  template_replace_material_seg.rs  template_replace_text.rs  update.rs  version.rs  vod_json_to_draft.rs
crates/jy_draft/: Cargo.toml
crates/jy_draft/src/: converter.rs  error.rs  lib.rs  templates.rs  writer.rs
crates/jy_draft/tests/: e2e_test.rs
crates/jy_media/: Cargo.toml
crates/jy_media/src/: error.rs  lib.rs  material.rs  probe.rs
crates/jy_schema/: Cargo.toml
crates/jy_schema/src/: canvas.rs  clip.rs  error.rs  keyframe.rs  lib.rs  material.rs  project.rs  text_style.rs  time.rs  track.rs  transform.rs
crates/jy_template/: Cargo.toml
crates/jy_template/src/: error.rs  lib.rs
crates/jy_template/tests/: template_test.rs
crates/jy_timeline/: Cargo.toml
crates/jy_timeline/src/: builder.rs  clip.rs  error.rs  lib.rs  track.rs
docs/: Bundle规范.md  COMPANION_APP_DESIGN.md  Manifest规范.md  使用文档.md  部署文档.md
scripts/: check-env.ps1  check-env.sh  install-jy.ps1  install-jy.sh  install.sh  run-jy.ps1  run-jy.sh
