[package]
name = "yingdraft_companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "yingdraft_companion"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
jy_bundle = { path = "../../crates/jy_bundle" }
