[package]
name = "jy_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
jy_schema = { path = "../jy_schema" }
jy_media = { path = "../jy_media" }
jy_timeline = { path = "../jy_timeline" }
jy_draft = { path = "../jy_draft" }
jy_template = { path = "../jy_template" }
jy_bundle = { path = "../jy_bundle" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
camino = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2"
tempfile = "3"

[dev-dependencies]
