[package]
name = "jy_draft"
version = "0.1.0"
edition = "2021"

[dependencies]
jy_schema = { path = "../jy_schema" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
