[package]
name = "jy_template"
version = "0.1.0"
edition = "2021"

[dependencies]
jy_schema = { path = "../jy_schema" }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
jy_draft = { path = "../jy_draft" }
tempfile = "3"
uuid = { workspace = true }
